# reflexta-analytics

./: .gitignore  .pre-commit-config.yaml  DEMO_GUIDE.md  DEMO_PRESENTATION.md  DEMO_READY_GUIDE.md  DEVELOPER_GUIDE.md  DRILL_DOWN_GUIDE.md  Dockerfile  EXTENSION_GUIDE.md  FILTER_ENHANCEMENTS.md  QUICK_REFERENCE.md  README.md  README_NEW.md  SECURITY_GUIDE.md  add_delivery_date_to_supabase.py  app.py  check_all_schema_differences.py  check_database_schema.py  check_local_database.py  check_schema_differences.py  check_supabase_columns.py  check_supabase_config.py  create_users_table.py  debug_network_issue.py  debug_secrets.py  debug_streamlit_connection.py  deploy.md  docker-compose.yml  env.example  fix_all_supabase_schema.py  fix_connection_usage.py  fix_supabase_schema.py  fix_supabase_schema_step_by_step.py  get_correct_connection.py  get_supabase_connection.py  populate_sample_data.py  populate_supabase_data.py  pyproject.toml  quick_schema_check.py  recreate_supabase_schema.py  (+20 more)
.streamlit/: config.toml  secrets.toml  secrets_template.toml
database/: schema.sql  setup_database.py  users_schema.sql
pages/: 00_Authentication.py  00_Database_Analysis.py  00_Login.py  03_Finance_Dashboard.py  04_Procurement_Dashboard.py  05_Analytics_Dashboard.py  99_User_Management.py
src/: __init__.py  ai_assistant.py  analytics_charts.py  analytics_queries.py  auth.py  auth_ui.py  charts.py  chat_ui.py  db.py  db_analysis.py  drill_down_examples.py  enhanced_ai_assistant.py  finance_charts.py  finance_queries.py  floating_ai_chat.py  global_ai_chat.py  interactive_charts.py  (+7 more)
