[project]
name = "data-viz-app"
version = "0.1.0"
description = "Production-grade data visualization app with Streamlit, pandas, SQLAlchemy, and Plotly"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
  "E", "F", "I",  # pycodestyle, pyflakes, isort
  "B",              # flake8-bugbear
  "UP",             # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.per-file-ignores]
"src/__init__.py" = ["F401"]


